change something of site

--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ navbar-links:
   Books adn Videos: "https://huhuifeng.github.io/Books_Videos"
   Literature about RL:
     - Base on Q learning: "https://huhuifeng.github.io/Base_Qlearning"
-    - Policy Gradient: "https://www.markdowntutorial.com/Policy_Gradient"
-  Author's home: "https://deanattali.com"
+    - Policy Gradient: "https://huhuifeng.github.io/Policy_Gradient"
+  Multi Agent: "https://huhuifeng.github.io/Multi_Agent"
 
 # --- Logo --- #
 
