change layout about Q

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ navbar-links:
   Books and Videos: "https://huhuifeng.github.io/Books_Videos"
   Literature about RL:
     - Base on Q learning: "https://huhuifeng.github.io/Base_Qlearning"
+       -literature base on Q: "https://huhuifeng.github.io/Base_Qlearning"
     - Policy Gradient: "https://huhuifeng.github.io/Policy_Gradient"
   Multi Agent: "https://huhuifeng.github.io/Multi_Agent"
 
