--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ navbar-links:
   Books and Videos: "https://huhuifeng.github.io/Books_Videos"
   Literature about RL:
     - literature base on Q learning: "https://huhuifeng.github.io/Base_Qlearning"
-    - conclusion base on Q: "https://huhuifeng.github.io/Base_Qlearning"
+    - conclusion base on Q learning: "https://huhuifeng.github.io/Base_Qlearning"
     - Policy Gradient: "https://huhuifeng.github.io/Policy_Gradient"
   Multi Agent: "https://huhuifeng.github.io/Multi_Agent"
 
