--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ navbar-links:
     - conclusion base on Q learning: "https://huhuifeng.github.io/blogs/conclusion_of_Q_Learning"
     - Policy Gradient: "https://huhuifeng.github.io/blogs/Policy_Gradient"
   Multi Agent: "https://huhuifeng.github.io/blogs/Multi_Agent"
+  IP Address: "https://huhuifeng.github.io/blogs/IP_Address"
 
 # --- Logo --- #
 
